# Video-Client

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/network/: network_manager.cpp  network_manager.h
src/core/video/: gst_video_receiver.cpp  gst_video_receiver.h
src/gui/: gui.cpp  gui.h
src/gui/widgets/: server_list.cpp  server_list.h
